[package]
name = "core-guix-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
octocrab = "0.47"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.37"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
debug = false
strip = "symbols"
lto = true
# codegen-units = 1
panic = "abort"
